# pyGeomatics

./: main.py  notes.py
assignment1/: segment.py  solve.py
assignment3/: geometry.py  query.py  reader.py  strips.py
assignment4/: nbody.cpp  nbody.py  readme.md  runtime.py
general/: main.py
general/cpp_lecture_files/: 01smallest.cpp  02declare.cpp  03typemod.cpp  04incr_decr.cpp  05odd_even.cpp  06while-loop.cpp  07for-loop.cpp  CMakeLists.txt
general/cpp_lecture_files/python-vs-cpp/: CMakeLists.txt  Makefile  fib.cpp  fib.py
