cmake_minimum_required(VERSION 3.22)
project(cpp_2024)

set(CMAKE_CXX_STANDARD 14)

add_executable(01smallest 01smallest.cpp)
add_executable(01hello 01hello.cpp)
add_executable(02declare 02declare.cpp)
add_executable(03typemod 03typemod.cpp)
add_executable(04incr_decr 04incr_decr.cpp)
add_executable(05odd_even 05odd_even.cpp)
add_executable(06while-loop 06while-loop.cpp)
add_executable(07for-loop 07for-loop.cpp)
